# study_rust_mq

./: .gitignore  readme.md
final/: Cargo.toml
final/src/cmd/: Cargo.toml
final/src/cmd/src/metadata-service/: server.rs
final/src/cmd/src/placement-center/: world.rs
l03/: Cargo.toml  Readme.md  makefile
l03/src/cmd/: Cargo.toml
l03/src/cmd/src/placement-center/: server.rs
l03/src/common-base/: Cargo.toml
l03/src/common-base/src/: lib.rs
l03/src/common-base/src/config_util/: config_util.rs
l03/src/common-base/src/protocol_util/: mod.rs
l03/src/placement-center/: Cargo.toml
l03/src/placement-center/src/: lib.rs
l03/src/protocol/: Cargo.toml
l03/src/protocol/src/: lib.rs
l04/: Cargo.toml  readme.md
l04/config/: log4rs.yaml  placement-center.toml
l04/src/: main.rs
l04/src/args/: mod.rs
l04/src/config/: mod.rs
l04/src/log_conf/: mod.rs
l05/: Cargo.toml  build.rs  readme.md
l05/src/: lib.rs
l05/src/backend_server/grpc/: grpc_server.rs  mod.rs  server.rs
l05/src/backend_server/http/: http_server.rs  route.rs
l06/: Cargo.toml  readme.md
l06/config/: placement-center.toml
l06/src/cmd/: Cargo.toml
l06/src/cmd/src/: args.rs  logs.rs  main.rs
l06/src/common-base/: Cargo.toml
l06/src/placement-center/: Cargo.toml
l06/src/placement-center/src/server/grpc/: server.rs
l06/src/placement-center/src/server/http/: http_response.rs  http_server.rs  mod.rs  route.rs
l06/src/placement-center/src/storage/: data_wrap.rs  mod.rs  rocksdb.rs  server.rs
l07/: Cargo.toml
l07/config/: log4rs.yaml
l07/src/cmd/src/: config.rs
l07/src/placement-center/: Cargo.toml
l07/src/placement-center/src/: lib.rs
l07/src/placement-center/src/raft/: storage.rs
l07/src/placement-center/src/server/grpc/: grpc_server.rs  mod.rs
l07/src/placement-center/src/server/http/: http_server.rs  route.rs
l07/src/placement-center/src/storage/: data_wrap.rs  kv.rs  mod.rs  raft.rs  rocksdb.rs
l07/src/protocol/: Cargo.toml  build.rs
l07/src/protocol/src/: lib.rs
src/cmd/: Cargo.toml
