#[workspace]
#members = [
#    "src/cmd",
#    "src/placement-center",
#    "src/protocol"
#]
#
#
#resolver = "2"
#
#
#[workspace.package]
#version = "0.0.1"
#edition = "2024"
#license = "Apache-2.0"
#
#
#[workspace.dependencies]
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#
#
### workspaces members
#placement-center = { path = "src/placement-center" }
#cmd = { path = "src/cmd" }
#protocol = { path = "src/protocol" }