[package]
name = "l05_1"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5.38", features = ["derive"] }
log4rs = "1.3.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.22"
serde_yaml = "0.9"
serde_json = "1.0.140"
tonic = "0.11.0"
tonic-build = "0.11.0"
prost = "0.12.6"

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "grpc-client"
path = "src/bin/client.rs"

[[bin]]
name = "grpc-server"
path = "src/bin/server.rs"