[workspace]
members = [
    "src/cmd",
    "src/common-base",
    "src/placement-center",
    "src/protocol"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
## workspaces members
common-base = { path = "src/common-base" }
placement-center = { path = "src/placement-center" }
protocol = {path = "src/protocol"}

axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5.38", features = ["derive"] }
log4rs = "1.3.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
toml = "0.8.22"
serde_yaml = "0.9"
serde_json = "1.0.140"
tonic = "0.11.0"
tonic-build = "0.11.0"
prost = "0.12.6"
rocksdb = "0.22.0"