[package]
name = "cmd"
version.workspace = true
edition.workspace = true
license.workspace = true




[dependencies]
[[bin]]
name = "hello"
path = "src/placement-center/hello.rs"

[[bin]]
name = "world"
path = "src/placement-center/world.rs"

[[bin]]
name = "metadata-service"
path = "src/metadata-service/server.rs"