[package]
name = "cmd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
placement-center.workspace = true
log.workspace = true
log4rs.workspace = true
clap.workspace = true
serde_yaml.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true

