[package]
name = "placement-center"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
protocol.workspace = true
axum.workspace = true
tokio.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tonic.workspace = true
rocksdb.workspace = true